# ASL_GPT_WEB

./: README.md
backend/: README.md  app.py  capture_sign_from_video.py  pyproject.toml  rag_engine.py  requiremnts.txt  setup.sh  text_openai_corrector.py  video_to_text_inference.py
backend/assets/data/books/: AAST.md  ASL-GPT.md  AUC.md  Alexandria_University_Colleges.md  BUE.md  Cairo.md  EJUST.md  GUC.md  asu_academic_data.md  mansora.md  zagazeg uni.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/endpoints/: answer.js  process.js
frontend/src/hooks/: useAnswerQuery.jsx  useProcessVideo.jsx
